--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    
+    
+    <!--配置起始页面-->
+    <welcome-file-list>
+        <welcome-file>/index.jsp</welcome-file>
+    </welcome-file-list>
+
+    <!--配置错误信息-->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/error/404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>505</error-code>
+        <location>/WEB-INF/views/error/505.jsp</location>
+    </error-page>
+
+
+
+
+    <!--<servlet>-->
+        <!--<servlet-name>MessageListServlet</servlet-name>-->
+        <!--<servlet-class>com.jdbc.servlet.MessageListServlet</servlet-class>-->
+    <!--</servlet>-->
+
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>MessageListServlet</servlet-name>-->
+        <!--<url-pattern>/message/list.do</url-pattern>-->
+    <!--</servlet-mapping>-->
+
 </web-app>
